--- a/l4e_notebook/2_dataset_creation.ipynb
+++ b/l4e_notebook/2_dataset_creation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e91677f2",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment** - Getting started\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5c384fd7",
    "metadata": {},
    "source": [
     "## Initialization\n",
@@ -41,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa189e3d",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -50,31 +53,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3985d0ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "boto3 version: 1.17.99 (should be >= 1.17.48 to include Lookout for Equipment API)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<script>Jupyter.notebook.kernel.restart()</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#!pip install --quiet --upgrade boto3 awscli aiobotocore botocore sagemaker tqdm\n",
+    "!pip install --quiet sagemaker==2.46.1 tqdm==4.62.1\n",
     "\n",
     "import boto3\n",
     "print(f'boto3 version: {boto3.__version__} (should be >= 1.17.48 to include Lookout for Equipment API)')\n",
@@ -86,6 +69,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d06b9a87",
    "metadata": {},
    "source": [
     "### Imports"
@@ -93,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "47be36c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
     "import config\n",
     "import os\n",
     "import pandas as pd\n",
@@ -114,36 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "f11a6aca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROCESSED_DATA = os.path.join('..', 'data', 'processed', '97978334-97be-4e45-bf5d-84d9e535a601')\n",
-    "TRAIN_DATA     = os.path.join(PROCESSED_DATA, 'training-data')\n",
-    "\n",
     "ROLE_ARN       = sagemaker.get_execution_role()\n",
     "REGION_NAME    = boto3.session.Session().region_name\n",
+    "ASSET_ID       = config.ASSET_ID\n",
     "DATASET_NAME   = config.DATASET_NAME\n",
     "BUCKET         = config.BUCKET\n",
-    "PREFIX         = config.PREFIX_TRAINING"
+    "PREFIX         = config.PREFIX_TRAINING\n",
+    "\n",
+    "PROCESSED_DATA = os.path.join('..', 'data', 'processed', ASSET_ID)\n",
+    "TRAIN_DATA     = os.path.join(PROCESSED_DATA, 'training-data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "93c90159",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['centrifugal-pump']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List of the directories from the training data \n",
     "# directory: each directory corresponds to a subsystem:\n",
@@ -158,6 +134,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb196c29",
    "metadata": {},
    "source": [
     "## Create a dataset\n",
@@ -166,6 +143,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40deb8ee",
    "metadata": {},
    "source": [
     "### Create data schema"
@@ -173,6 +151,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32265b90",
    "metadata": {},
    "source": [
     "First we need to setup the schema of your dataset. In the cell below, we define `DATASET_COMPONENT_FIELDS_MAP`. `DATASET_COMPONENT_FIELDS_MAP` is a Python dictonary (hashmap). The key of each entry in the dictionary is the `Component` name, and the value of each entry is a list of column names. The column names must exactly match the header in your CSV files. The order of the column names also need to exactly match:\n",
@@ -218,7 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "778e4cd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +224,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5234d00b",
    "metadata": {},
    "source": [
     "If you wanted to use the console, the following string would be the one to use to configure the **dataset schema**:\n",
@@ -252,57 +233,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Components': [{'Columns': [{'Name': 'Timestamp', 'Type': 'DATETIME'},\n",
-      "                             {'Name': 'Sensor0', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor1', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor2', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor3', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor4', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor5', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor6', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor7', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor8', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor9', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor10', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor11', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor24', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor25', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor26', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor27', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor28', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor29', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor12', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor13', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor14', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor15', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor16', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor17', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor18', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor19', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor20', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor21', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor22', 'Type': 'DOUBLE'},\n",
-      "                             {'Name': 'Sensor23', 'Type': 'DOUBLE'}],\n",
-      "                 'ComponentName': 'centrifugal-pump'}]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pprint\n",
-    "pp = pprint.PrettyPrinter(depth=5)\n",
-    "pp.pprint(eval(lookout_dataset.dataset_schema))"
-   ]
-  },
-  {
    "cell_type": "markdown",
+   "id": "1af76965",
    "metadata": {},
    "source": [
     "### Create the dataset\n",
@@ -320,43 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "c4d1f331",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset \"97978334-97be-4e45-bf5d-84d9e535a601\" does not exist, creating it...\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'DatasetName': '97978334-97be-4e45-bf5d-84d9e535a601',\n",
-       " 'DatasetArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:dataset/97978334-97be-4e45-bf5d-84d9e535a601/52d6f9f9-cebe-4a15-bcca-3bea29e618a8',\n",
-       " 'Status': 'CREATED',\n",
-       " 'ResponseMetadata': {'RequestId': 'c75ef9a7-96a9-47a1-974c-ab9d6e547b86',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'c75ef9a7-96a9-47a1-974c-ab9d6e547b86',\n",
-       "   'content-type': 'application/x-amz-json-1.0',\n",
-       "   'content-length': '218',\n",
-       "   'date': 'Fri, 23 Jul 2021 01:51:06 GMT'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lookout_dataset.create()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "549ec670",
    "metadata": {},
    "source": [
     "The dataset is now created, but it is empty and ready to receive some timeseries data that we will ingest from the S3 location prepared in the previous notebook:"
@@ -364,6 +270,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cef90956",
    "metadata": {},
    "source": [
     "![Dataset created](assets/dataset-created.png)"
@@ -371,6 +278,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec2743f4",
    "metadata": {},
    "source": [
     "## Ingest data into a dataset\n",
@@ -380,29 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "e0fa2a52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('arn:aws:iam::593512547852:role/L4ESagemaker-SageMakerIamRole-RLE9HD9GRB46',\n",
-       " 'l4e-sitewise-d7bf5fa0',\n",
-       " '97978334-97be-4e45-bf5d-84d9e535a601/training-data/',\n",
-       " '97978334-97be-4e45-bf5d-84d9e535a601')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ROLE_ARN, BUCKET, PREFIX, DATASET_NAME"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "149921a2",
    "metadata": {},
    "source": [
     "Launch the ingestion job in the Lookout for Equipment dataset: the following method encapsulates the [**StartDataIngestionJob**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_StartDataIngestionJob.html) API:\n",
@@ -423,7 +319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "6efea115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,6 +329,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12c5ca30",
    "metadata": {},
    "source": [
     "The ingestion is launched. With this amount of data (around 50 MB), it should take between less than 5 minutes:\n",
@@ -441,6 +339,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd001b92",
    "metadata": {},
    "source": [
     "We use the following cell to monitor the ingestion process by calling the [**DescribeDataIngestionJob**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_DescribeDataIngestionJob.html) API every 60 seconds:"
@@ -448,25 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "f44445c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=====Polling Data Ingestion Status=====\n",
-      "\n",
-      "2021-07-23 01:51:51 | IN_PROGRESS\n",
-      "2021-07-23 01:52:51 | IN_PROGRESS\n",
-      "2021-07-23 01:53:51 | IN_PROGRESS\n",
-      "2021-07-23 01:54:51 | IN_PROGRESS\n",
-      "2021-07-23 01:55:51 | SUCCESS\n",
-      "\n",
-      "=====End of Polling Data Ingestion Status=====\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the ingestion job ID and status:\n",
     "data_ingestion_job_id = response['JobId']\n",
@@ -488,6 +372,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3f58551",
    "metadata": {},
    "source": [
     "In case any issue arise, you can inspect the API response available as a JSON document:"
@@ -495,40 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "ef4e4f13",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'JobId': '92288628733de3630a014d30a7bc9cc6',\n",
-       " 'DatasetArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:dataset/97978334-97be-4e45-bf5d-84d9e535a601/52d6f9f9-cebe-4a15-bcca-3bea29e618a8',\n",
-       " 'IngestionInputConfiguration': {'S3InputConfiguration': {'Bucket': 'l4e-sitewise-d7bf5fa0',\n",
-       "   'Prefix': '97978334-97be-4e45-bf5d-84d9e535a601/training-data/'}},\n",
-       " 'RoleArn': 'arn:aws:iam::593512547852:role/L4ESagemaker-SageMakerIamRole-RLE9HD9GRB46',\n",
-       " 'CreatedAt': datetime.datetime(2021, 7, 23, 1, 51, 40, 252000, tzinfo=tzlocal()),\n",
-       " 'Status': 'SUCCESS',\n",
-       " 'ResponseMetadata': {'RequestId': 'da597933-299d-482b-b73c-df63690ac7ea',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'da597933-299d-482b-b73c-df63690ac7ea',\n",
-       "   'content-type': 'application/x-amz-json-1.0',\n",
-       "   'content-length': '476',\n",
-       "   'date': 'Fri, 23 Jul 2021 01:57:22 GMT',\n",
-       "   'connection': 'close'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lookout_client.describe_data_ingestion_job(JobId=data_ingestion_job_id)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "60edfae7",
    "metadata": {},
    "source": [
     "The ingestion should now be complete as can be seen in the console:\n",
@@ -538,6 +400,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "355ff31e",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -546,24 +409,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2afe1ec",
    "metadata": {},
    "source": [
     "In this notebook, we created a **Lookout for Equipment dataset** and ingested the S3 data previously uploaded into this dataset. **Move now to the next notebook to train a model based on these data.**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -575,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
