--- a/l4e_notebook/3_model_training.ipynb
+++ b/l4e_notebook/3_model_training.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a9ae0692",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment** - Getting started\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4bfdc0fb",
    "metadata": {},
    "source": [
     "## Initialization\n",
@@ -41,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0bf3cb9e",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -50,32 +53,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36790a48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "boto3 version: 1.17.99 (should be >= 1.17.48 to include Lookout for Equipment API)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<script>Jupyter.notebook.kernel.restart()</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#!pip install --quiet --upgrade boto3 awscli aiobotocore botocore sagemaker tqdm\n",
-    "\n",
     "import boto3\n",
     "print(f'boto3 version: {boto3.__version__} (should be >= 1.17.48 to include Lookout for Equipment API)')\n",
     "\n",
@@ -86,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a79974e",
    "metadata": {},
    "source": [
     "### Imports"
@@ -93,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "09bfc3f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
     "import config\n",
     "import os\n",
     "import pandas as pd\n",
@@ -111,7 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "e81996ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +108,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40646f0b",
    "metadata": {},
    "source": [
     "Based on the label time ranges, we will use the following time ranges:\n",
@@ -135,18 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "e7fe778e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Training period | from 2019-01-01 00:00:00 to 2019-07-31 00:00:00\n",
-      "Evaluation period | from 2019-08-01 00:00:00 to 2019-10-27 00:00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Configuring time ranges:\n",
     "training_start   = pd.to_datetime('2019-01-01 00:00:00')\n",
@@ -160,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63d86a57",
    "metadata": {},
    "source": [
     "## Model training\n",
@@ -168,7 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "7e76615f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +176,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c55d8fd",
    "metadata": {},
    "source": [
     "The following method encapsulates a call to the [**CreateModel**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_CreateModel.html) API:"
@@ -205,28 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "330798c6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ModelArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:model/97978334-97be-4e45-bf5d-84d9e535a601-model/4f4b64b4-d42e-4c5b-9a32-834b5512b242',\n",
-       " 'Status': 'IN_PROGRESS',\n",
-       " 'ResponseMetadata': {'RequestId': 'f6b757cf-b1ca-4d08-bc7e-6f23191375d6',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'f6b757cf-b1ca-4d08-bc7e-6f23191375d6',\n",
-       "   'content-type': 'application/x-amz-json-1.0',\n",
-       "   'content-length': '171',\n",
-       "   'date': 'Fri, 23 Jul 2021 01:59:35 GMT'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Actually create the model and train it:\n",
     "lookout_model.train()"
@@ -234,6 +195,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21c9a1f2",
    "metadata": {},
    "source": [
     "A training is now in progress as captured by the console:\n",
@@ -249,28 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "d584cef9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-07-23 02:04:39 | Model training: IN_PROGRESS\n",
-      "2021-07-23 02:09:39 | Model training: IN_PROGRESS\n",
-      "2021-07-23 02:14:40 | Model training: IN_PROGRESS\n",
-      "2021-07-23 02:19:40 | Model training: IN_PROGRESS\n",
-      "2021-07-23 02:24:40 | Model training: IN_PROGRESS\n",
-      "2021-07-23 02:29:40 | Model training: SUCCESS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lookout_model.poll_model_training(sleep_time=300)"
+    "lookout_model.poll_model_training(sleep_time=60)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "5ab488f8",
    "metadata": {},
    "source": [
     "A model is now trained and we can visualize the results of the back testing on the evaluation window selected at the beginning on this notebook:\n",
@@ -280,6 +231,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bbacfb86",
    "metadata": {},
    "source": [
     "In the console, **you can click on each detected event**: Amazon Lookout for Equipment unpacks the ranking and display the top sensors contributing to the detected events.\n",
@@ -291,6 +243,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0592ef10",
    "metadata": {},
    "source": [
     "This dataset contains 30 sensors:\n",
@@ -301,6 +254,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c63d010",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -309,6 +263,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50750b4d",
    "metadata": {},
    "source": [
     "In this notebook, we use the dataset created in part 2 of this notebook series and trained an Amazon Lookout for Equipment model.\n",
@@ -317,20 +272,13 @@
     "* To the next notebook where we will **extract the evaluation data** for this model and use it to perform further analysis on the model results: this is optional and just gives you some pointers on how to post-process and visualize the data provided by Amazon Lookout for Equipment.\n",
     "* Or to the **inference scheduling notebook** where we will start the model, feed it some new data and catch the results."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -342,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
