--- a/l4e_notebook/5_inference_scheduling.ipynb
+++ b/l4e_notebook/5_inference_scheduling.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "171652ba",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment** - Getting started\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed86efb8",
    "metadata": {},
    "source": [
     "## Initialization\n",
@@ -41,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ba243a9",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -50,32 +53,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d0325c4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "boto3 version: 1.17.99 (should be >= 1.17.48 to include Lookout for Equipment API)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<script>Jupyter.notebook.kernel.restart()</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#!pip install --quiet --upgrade boto3 awscli aiobotocore botocore sagemaker tqdm\n",
-    "\n",
     "import boto3\n",
     "print(f'boto3 version: {boto3.__version__} (should be >= 1.17.48 to include Lookout for Equipment API)')\n",
     "\n",
@@ -86,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2262177",
    "metadata": {},
    "source": [
     "### Imports"
@@ -93,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "8a56bd62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
     "import config\n",
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
@@ -117,6 +99,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b66f3b6",
    "metadata": {},
    "source": [
     "### Parameters"
@@ -124,25 +107,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "d2bdcf6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TMP_DATA       = os.path.join('..', 'data', 'interim', '97978334-97be-4e45-bf5d-84d9e535a601')\n",
-    "PROCESSED_DATA = os.path.join('..', 'data', 'processed', '97978334-97be-4e45-bf5d-84d9e535a601')\n",
-    "INFERENCE_DATA = os.path.join(PROCESSED_DATA, 'inference-data')\n",
-    "TRAIN_DATA     = os.path.join(PROCESSED_DATA, 'training-data', 'centrifugal-pump')\n",
-    "\n",
-    "os.makedirs(INFERENCE_DATA, exist_ok=True)\n",
-    "os.makedirs(os.path.join(INFERENCE_DATA, 'input'), exist_ok=True)\n",
-    "os.makedirs(os.path.join(INFERENCE_DATA, 'output'), exist_ok=True)\n",
-    "\n",
     "ROLE_ARN                 = sagemaker.get_execution_role()\n",
     "REGION_NAME              = boto3.session.Session().region_name\n",
     "BUCKET                   = config.BUCKET\n",
     "PREFIX                   = config.PREFIX_INFERENCE\n",
     "INFERENCE_SCHEDULER_NAME = config.INFERENCE_SCHEDULER_NAME\n",
     "MODEL_NAME               = config.MODEL_NAME\n",
+    "ASSET_ID                 = config.ASSET_ID\n",
+    "\n",
+    "TMP_DATA       = os.path.join('..', 'data', 'interim', ASSET_ID)\n",
+    "PROCESSED_DATA = os.path.join('..', 'data', 'processed', ASSET_ID)\n",
+    "INFERENCE_DATA = os.path.join(PROCESSED_DATA, 'inference-data')\n",
+    "TRAIN_DATA     = os.path.join(PROCESSED_DATA, 'training-data', 'centrifugal-pump')\n",
+    "\n",
+    "os.makedirs(INFERENCE_DATA, exist_ok=True)\n",
+    "os.makedirs(os.path.join(INFERENCE_DATA, 'input'), exist_ok=True)\n",
+    "os.makedirs(os.path.join(INFERENCE_DATA, 'output'), exist_ok=True)\n",
     "\n",
     "%matplotlib inline\n",
     "plt.style.use('Solarize_Light2')\n",
@@ -151,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "33c48a55",
    "metadata": {},
    "source": [
     "## Create an inference scheduler\n",
@@ -162,6 +148,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e16ccef1",
    "metadata": {},
    "source": [
     "### Scheduler configuration\n",
@@ -181,7 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "f1aabcdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +187,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "515be879",
    "metadata": {},
    "source": [
     "#### Time zone parameter (optional)\n",
@@ -223,19 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "b9fc22e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "utc_timezone = pytz.timezone(\"UTC\")\n",
     "\n",
-    "current_timezone = pytz.timezone(\"Etc/UTC\")\n",
+    "current_timezone = pytz.timezone(\"Asia/Calcutta\")\n",
     "tz_offset = datetime.datetime.now(current_timezone).strftime('%z')\n",
     "INPUT_TIMEZONE_OFFSET = tz_offset[:3] + ':' + tz_offset[3:]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "21eced0e",
    "metadata": {},
    "source": [
     "#### Other optional parameters\n",
@@ -247,17 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "f31c6f1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DELAY_OFFSET_IN_MINUTES = 1\n",
+    "DATA_DELAY_OFFSET_IN_MINUTES = 2\n",
     "COMPONENT_TIMESTAMP_DELIMITER = '_'\n",
     "TIMESTAMP_FORMAT = 'yyyyMMddHHmmss'"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "36a56199",
    "metadata": {},
    "source": [
     "### Create the inference scheduler\n",
@@ -266,7 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "e203813d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +288,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab50d869",
    "metadata": {},
    "source": [
     "## Prepare the inference data\n",
@@ -302,8 +297,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fed67d1",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load the original inference data:\n",
     "inference_fname = os.path.join(TMP_DATA, 'inference-data', 'inference.csv')\n",
@@ -365,6 +363,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf640189",
    "metadata": {},
    "source": [
     "Our S3 bucket is now in the following state: this emulates what you could expect if your industrial information system was sending a new sample of data every five minutes.\n",
@@ -379,6 +378,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "759557b8",
    "metadata": {},
    "source": [
     "Now that we've prepared the data, we can create the scheduler by running:\n",
@@ -394,28 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "87ee12fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "===== Polling Inference Scheduler Status =====\n",
-      "\n",
-      "Scheduler Status: PENDING\n",
-      "Scheduler Status: RUNNING\n",
-      "\n",
-      "===== End of Polling Inference Scheduler Status =====\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_scheduler_response = scheduler.create()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "3c6a1755",
    "metadata": {},
    "source": [
     "Our scheduler is now running and its inference history is currently empty:\n",
@@ -425,6 +414,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5eeafaa",
    "metadata": {},
    "source": [
     "## Get inference results\n",
@@ -433,6 +423,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eabb3061",
    "metadata": {},
    "source": [
     "### List inference executions"
@@ -440,6 +431,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "235febf2",
    "metadata": {},
    "source": [
     "**Let's now wait for 5-15 minutes to give some time to the scheduler to run its first inferences.** Once the wait is over, we can use the ListInferenceExecution API for our current inference scheduler. The only mandatory parameter is the scheduler name.\n",
@@ -470,41 +462,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "9c2ea743",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WAITING FOR THE FIRST INFERENCE EXECUTION\n",
-      "FIRST INFERENCE EXECUTED\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'ModelName': '97978334-97be-4e45-bf5d-84d9e535a601-model',\n",
-       "  'ModelArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:model/97978334-97be-4e45-bf5d-84d9e535a601-model/4f4b64b4-d42e-4c5b-9a32-834b5512b242',\n",
-       "  'InferenceSchedulerName': '97978334-97be-4e45-bf5d-84d9e535a601-scheduler',\n",
-       "  'InferenceSchedulerArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:inference-scheduler/97978334-97be-4e45-bf5d-84d9e535a601-scheduler/11670f79-b871-49e3-9a1f-785b8d2aad07',\n",
-       "  'ScheduledStartTime': datetime.datetime(2021, 7, 23, 18, 31, tzinfo=tzlocal()),\n",
-       "  'DataStartTime': datetime.datetime(2021, 7, 23, 18, 25, tzinfo=tzlocal()),\n",
-       "  'DataEndTime': datetime.datetime(2021, 7, 23, 18, 30, tzinfo=tzlocal()),\n",
-       "  'DataInputConfiguration': {'S3InputConfiguration': {'Bucket': 'l4e-sitewise-d7bf5fa0',\n",
-       "    'Prefix': '97978334-97be-4e45-bf5d-84d9e535a601/inference-data/input/'}},\n",
-       "  'DataOutputConfiguration': {'S3OutputConfiguration': {'Bucket': 'l4e-sitewise-d7bf5fa0',\n",
-       "    'Prefix': '97978334-97be-4e45-bf5d-84d9e535a601/inference-data/output/'}},\n",
-       "  'Status': 'FAILED',\n",
-       "  'FailedReason': 'Could not find data file for sensor centrifugal-pump within expected range of (2021-07-23T18:25:00Z, 2021-07-23T18:30:00Z]. Please ensure data is present for all sensors of the machine under prefix 97978334-97be-4e45-bf5d-84d9e535a601/inference-data/input/centrifugal-pump_2021072318'}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "START_TIME_FOR_INFERENCE_EXECUTIONS = None\n",
     "END_TIME_FOR_INFERENCE_EXECUTIONS = None\n",
@@ -531,6 +492,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe15301a",
    "metadata": {},
    "source": [
     "We have configured this scheduler to run every five minutes. After at least 5 minutes we can also see the history in the console populated with its first few executions: after an hour or so, we will see that the last one failed as we only generated 10 files above and the scheduler did find the last one at the time it was fired:\n",
@@ -540,6 +502,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "712135df",
    "metadata": {},
    "source": [
     "When the scheduler starts (for example at `datetime.datetime(2021, 1, 27, 9, 15)`, it looks for **a single** CSV file located in the input location with a filename that contains a timestamp set to the previous step. For example, a file named:\n",
@@ -552,6 +515,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d079b6d",
    "metadata": {},
    "source": [
     "### Download inference results\n",
@@ -565,6 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "95d1290e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,6 +538,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb469d3b",
    "metadata": {},
    "source": [
     "When the `Status` key from the previous JSON result is set to `SUCCESS`, you can collect the results location in the `CustomerResultObject` field. We are now going to loop through each execution result and download each JSON lines files generated by the scheduler. Then we will insert their results into an overall dataframe for further analysis:"
@@ -581,6 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a95f0dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,6 +586,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a916fa69",
    "metadata": {},
    "source": [
     "The content of each JSON lines file follows this format:\n",
@@ -648,6 +616,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66025bf1",
    "metadata": {},
    "source": [
     "### Visualizing the inference results\n",
@@ -658,6 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ba1a0752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,6 +652,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de18352b",
    "metadata": {},
    "source": [
     "Each detected event have some detailed diagnostics. Let's unpack the details for the first event and plot a similar bar chart than what the console provides when it evaluates a trained model:"
@@ -690,6 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2ae00f5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,6 +693,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4e13989",
    "metadata": {},
    "source": [
     "As we did in the previous notebook, the above bar chart is already of great help to pinpoint what might be going wrong with your asset. Let's load the initial tags description file we prepared in the first notebook and match the sensors with our initial components to group sensors by component:"
@@ -729,6 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d8fc8c0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,6 +735,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "825e3cc5",
    "metadata": {},
    "source": [
     "#### Multiple inferences analysis"
@@ -768,6 +743,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77f46d35",
    "metadata": {},
    "source": [
     "We can also plot the contribution evolution for the top contributing signals over a period of time: the following graph gives an example of what a real time dashboard could look like to expose the results of an Amazon Lookout for Equipment scheduler.\n",
@@ -778,6 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d7c29ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,6 +772,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b97bf42",
    "metadata": {},
    "source": [
     "The above plot is quite busy, let's filter on the signals that are, in average, **contributing the most** across this event and focus **only on the time range when something is happening**:"
@@ -803,6 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4221df33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,6 +801,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "078c65b5",
    "metadata": {},
    "source": [
     "**As previously, let's agregate these sensor data at the component level:**"
@@ -830,6 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7eec2757",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,6 +824,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00b779bd",
    "metadata": {},
    "source": [
     "It looks like the pump is the first area where an anomaly is visible before each component becomes more balanced in the way they contribute to this detected event. However, the sensors associated to **the pump stays at the very high level** along this particular event which may call to a specific course of action:"
@@ -851,6 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "750acb4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,6 +846,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3ffc655",
    "metadata": {},
    "source": [
     "## Inference scheduler operations\n",
@@ -882,6 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "50e540ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,6 +875,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec453cb1",
    "metadata": {},
    "source": [
     "### Start an inference scheduler\n",
@@ -907,6 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8e864fcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,6 +902,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a3eda47",
    "metadata": {},
    "source": [
     "### Delete an inference scheduler\n",
@@ -932,6 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "67bb976e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,6 +930,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "55b97902",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -949,6 +939,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8ae5bd2",
    "metadata": {},
    "source": [
     "In this notebook, we used the model created in part 3 of this notebook, configured a scheduler and extracted the predictions obtained after it executed a few inferences.\n",
@@ -959,9 +950,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -973,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
