--- a/l4e_notebooks/3_model_training.ipynb
+++ b/l4e_notebooks/3_model_training.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6f0e2975",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment**\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fb6c976",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -19,8 +21,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "810a6992",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "boto3 version: 1.18.21 (should be >= 1.17.48 to include Lookout for Equipment API)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>Jupyter.notebook.kernel.restart()</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import boto3\n",
     "print(f'boto3 version: {boto3.__version__} (should be >= 1.17.48 to include Lookout for Equipment API)')\n",
@@ -32,6 +56,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc8dd174",
    "metadata": {},
    "source": [
     "### Imports"
@@ -39,10 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "cdfd7342",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import boto3\n",
     "import config\n",
     "import os\n",
     "import pandas as pd\n",
@@ -56,7 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "d0d91fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +98,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f6b8e63",
    "metadata": {},
    "source": [
     "Based on the label time ranges, we will use the following time ranges:\n",
@@ -80,9 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "71c42789",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Training period | from 2019-01-01 00:00:00 to 2019-07-31 00:00:00\n",
+      "Evaluation period | from 2019-08-01 00:00:00 to 2019-10-27 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuring time ranges:\n",
     "training_start   = pd.to_datetime('2019-01-01 00:00:00')\n",
@@ -96,6 +135,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee76b714",
    "metadata": {},
    "source": [
     "## Model training\n",
@@ -104,7 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "58a041f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +175,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95e9fa6c",
    "metadata": {},
    "source": [
     "The following method encapsulates a call to the [**CreateModel**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_CreateModel.html) API:"
@@ -141,9 +183,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "78b8a5d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ModelArn': 'arn:aws:lookoutequipment:us-east-1:593512547852:model/2c560561-26e0-441c-8adb-edd315b3a283-model/42ac26ff-1b27-41d2-ae4c-049d03db682c',\n",
+       " 'Status': 'IN_PROGRESS',\n",
+       " 'ResponseMetadata': {'RequestId': '1dc3bd8e-01a4-49a0-8e43-fe421f82152c',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '1dc3bd8e-01a4-49a0-8e43-fe421f82152c',\n",
+       "   'content-type': 'application/x-amz-json-1.0',\n",
+       "   'content-length': '171',\n",
+       "   'date': 'Fri, 20 Aug 2021 01:23:07 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Actually create the model and train it:\n",
     "lookout_model.train()"
@@ -151,6 +213,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c8f8a191",
    "metadata": {},
    "source": [
     "A training is now in progress as captured by the console:\n",
@@ -166,15 +229,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "0aa8c927",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-20 01:24:09 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:25:09 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:26:09 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:27:09 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:28:10 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:29:10 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:30:10 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:31:10 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:32:10 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:33:10 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:34:10 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:35:10 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:36:11 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:37:11 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:38:11 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:39:11 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:40:11 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:41:11 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:42:12 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:43:12 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:44:12 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:45:12 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:46:12 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:47:12 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:48:12 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:49:13 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:50:13 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:51:13 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:52:13 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:53:13 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:54:13 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:55:14 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:56:14 | Model training: IN_PROGRESS\n",
+      "2021-08-20 01:57:14 | Model training: SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "lookout_model.poll_model_training(sleep_time=60)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "2034ad47",
    "metadata": {},
    "source": [
     "A model is now trained and we can visualize the results of the back testing on the evaluation window selected at the beginning on this notebook:\n",
@@ -184,6 +290,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fae4677b",
    "metadata": {},
    "source": [
     "In the console, **you can click on each detected event**: Amazon Lookout for Equipment unpacks the ranking and display the top sensors contributing to the detected events.\n",
@@ -195,6 +302,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "433001a5",
    "metadata": {},
    "source": [
     "This dataset contains 30 sensors:\n",
@@ -205,6 +313,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae3d0ae0",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -213,6 +322,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a0d6c92b",
    "metadata": {},
    "source": [
     "In this notebook, we use the dataset created in part 2 of this notebook series and trained an Amazon Lookout for Equipment model.\n",
@@ -225,9 +335,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -239,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
