--- a/l4e_notebooks/4(optional)_model_evaluation.ipynb
+++ b/l4e_notebooks/4(optional)_model_evaluation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment**\n",
-    "*Part 4 - Model evaluation*"
+    "*Part 4 - Model evaluation* (Optional)"
    ]
   },
   {
@@ -373,10 +373,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "In this notebook, we use the model created in part 3 of this notebook series and performed a few visualization and diagnostics on the results obtained. You can now move forward to the next step to the **inference scheduling notebook** where we will start the model, feed it some new data and catch the results."
+    "# Needed for visualizing markdowns programatically\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "display(Markdown(\n",
+    "'''\n",
+    "<span style=\"color:green\"><span style=\"font-size:50px\">**Success!**</span></span>\n",
+    "<br/>\n",
+    "In this notebook, we use the model created in part 3 of this notebook series and performed a few visualization and diagnostics on the results obtained. You can now move forward to the next step to the **inference scheduling notebook** where we will start the model, feed it some new data and catch the results.\n",
+    "'''))"
    ]
   }
  ],
